add trabajos api razor page

--- a/RazorPageGHDS/Pages/Shared/_Layout.cshtml
+++ b/RazorPageGHDS/Pages/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuarios">Usuarios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuarios/Usuarios">Usuarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Proyectos">Proyectos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Proyectos/Proyectos">Proyectos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Trabajos/Trabajos">Trabajos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Servicios">Servicios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Servicios/Servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Ingresar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Ingresar</a>
                         </li>
                     </ul>
                 </div>
