--- a/RazorPageGHDS/Pages/Trabajos/Agregar.cshtml
+++ b/RazorPageGHDS/Pages/Trabajos/Agregar.cshtml
@@ -10,55 +10,55 @@
     </div>
     <div class="card-body">
         <form method="post">
-            @*Agrega vallidación, campo no vacio*@
+            @*Agrega validación, campo no vacio*@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="container" style="padding:30px">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-2">
-                            <label asp-for="trabajo.Fecha"></label>
+                            <label asp-for="Trabajo.Fecha"></label>
                         </div>
                         <div class="col-sm-6">
-                            <input asp-for="trabajo.Fecha" class="form-control" />
+                            <input asp-for="Trabajo.Fecha" class="form-control" />
                         </div>
-                        <span asp-validation-for="trabajo.Fecha" class="text-danger"></span>
+                        <span asp-validation-for="Trabajo.Fecha" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-2">
-                            <label asp-for="trabajo.CantHoras"></label>
+                            <label asp-for="Trabajo.CantHoras"></label>
                         </div>
                         <div class="col-sm-6">
-                            <input asp-for="trabajo.CantHoras" class="form-control" />
+                            <input asp-for="Trabajo.CantHoras" class="form-control" />
                         </div>
-                        <span asp-validation-for="trabajo.CantHoras" class="text-danger"></span>
+                        <span asp-validation-for="Trabajo.CantHoras" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-2">
-                            <label asp-for="trabajo.ValorHora"></label>
+                            <label asp-for="Trabajo.ValorHora"></label>
                         </div>
                         <div class="col-sm-6">
-                            <input asp-for="trabajo.ValorHora" class="form-control" />
+                            <input asp-for="Trabajo.ValorHora" class="form-control" />
                         </div>
-                        <span asp-validation-for="trabajo.ValorHora" class="text-danger"></span>
+                        <span asp-validation-for="Trabajo.ValorHora" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="row">
                         <div class="col-sm-2">
-                            <label asp-for="trabajo.Costo"></label>
+                            <label asp-for="Trabajo.Costo"></label>
                         </div>
                         <div class="col-sm-6">
-                            <input asp-for="trabajo.Costo" class="form-control" />
+                            <input asp-for="Trabajo.Costo" class="form-control" />
                         </div>
-                        <span asp-validation-for="trabajo.Costo" class="text-danger"></span>
+                        <span asp-validation-for="Trabajo.Costo" class="text-danger"></span>
                     </div>
                 </div>
 
