--- a/RazorPageGHDS/Pages/Trabajos/Trabajos.cshtml
+++ b/RazorPageGHDS/Pages/Trabajos/Trabajos.cshtml
@@ -5,9 +5,10 @@
 }
 
 <div class="container my-3">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
             <h2>Listado de Trabajos</h2>
+            <form method="post">
             <table class="table table-info table-striped border">
                 <thead>
                     <tr>
@@ -34,13 +35,46 @@
                             <td class="text-center">@trabajo.Costo</td>
                             <td class="text-center">
                                 <a asp-page="Editar" asp-route-CodTrabajo="@trabajo.CodTrabajo" class="btn btn-primary">Editar</a>
-                                <button asp-page-handler="Borrar" asp-route-id="@trabajo.CodTrabajo" onclick="return confirm('Esta seguro de querer borrar el trabajo?')" 
+                                <button asp-page-handler="Borrar" asp-route-CodTrabajo="@trabajo.CodTrabajo" onclick="return confirm('Esta seguro de querer borrar el trabajo?')"
                                 class="btn btn-danger btnsm">Borrar</button>
                             </td>
                         </tr>
                     }
                 </tbody>
             </table>
+            </form>
+                    <div class="d-flex justify-content-center mt-4">
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination">
+                                @if (Model.PageNumber > 1)
+                                {
+                                    <li class="page-item">
+                                        <a class="page-link" href="?pageNumber=@(Model.PageNumber - 1)&pageSize=@Model.PageSize" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                            <span class="sr-only">Anterior</span>
+                                        </a>
+                                    </li>
+                                }
+
+                                @for (int i = 1; i <= Model.TotalPages; i++)
+                                {
+                                    <li class="page-item @(Model.PageNumber == i ? "active" : "")">
+                                        <a class="page-link" href="?pageNumber=@i&pageSize=@Model.PageSize">@i</a>
+                                    </li>
+                                }
+
+                                @if (Model.PageNumber < Model.TotalPages)
+                                {
+                                    <li class="page-item">
+                                        <a class="page-link" href="?pageNumber=@(Model.PageNumber + 1)&pageSize=@Model.PageSize" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                            <span class="sr-only">Siguiente</span>
+                                        </a>
+                                    </li>
+                                }
+                            </ul>
+                        </nav>
+                    </div>
         <div>
                 <div class="d-grid gap-2">
                     <a asp-page="Agregar" class="btn btn-success">Agregar</a>
