--- a/RazorPageGHDS/Pages/Login/Login.cshtml
+++ b/RazorPageGHDS/Pages/Login/Login.cshtml
@@ -9,16 +9,16 @@
             <form asp-controller="AuthController" asp-action="Auth" method="post">
 
                 <div class="form-group pb-3">
-                    <label asp-for="usuario.Nombre" for="username">Usuario</label>
-                    <input type="text" class="form-control" id="username" placeholder="Ingrese su nombre de usuario" asp-for="usuario.Nombre">
+                    <label asp-for="Usuario.Nombre" for="username">Usuario</label>
+                    <input type="text" class="form-control" id="username" placeholder="Ingrese su nombre de usuario" asp-for="Usuario.Nombre">
                 </div>
-                <span asp-validation-for="usuario.Nombre" class="text-danger"></span>
+                <span asp-validation-for="Usuario.Nombre" class="text-danger"></span>
 
                 <div class="form-group pb-3">
-                    <label asp-for="usuario.Contraseña" for="password">Contraseña</label>
-                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" asp-for="usuario.Contraseña">
+                    <label asp-for="Usuario.Contraseña" for="password">Contraseña</label>
+                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña" asp-for="Usuario.Contraseña">
                 </div>
-                <span asp-validation-for="usuario.Contraseña" class="text-danger"></span>
+                <span asp-validation-for="Usuario.Contraseña" class="text-danger"></span>
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="text-center">
@@ -29,3 +29,30 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    <script>
+        // Almacena el nombre de usuario en sessionStorage al enviar el formulario
+        document.getElementById("username").addEventListener("input", function () {
+            sessionStorage.setItem("username", this.value);
+        });
+
+        // Almacena la contraseña en sessionStorage al enviar el formulario
+        document.getElementById("password").addEventListener("input", function () {
+            sessionStorage.setItem("password", this.value);
+        });
+
+        // Recupera los valores almacenados en sessionStorage al cargar la página
+        window.addEventListener("load", function () {
+            var username = sessionStorage.getItem("username");
+            var password = sessionStorage.getItem("password");
+
+            if (username) {
+                document.getElementById("username").value = username;
+            }
+
+            if (password) {
+                document.getElementById("password").value = password;
+            }
+        });
+    </script>
+}
