add logo and style frontend

--- a/RazorPageGHDS/Pages/Index.cshtml
+++ b/RazorPageGHDS/Pages/Index.cshtml
@@ -4,7 +4,22 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-div-container">
+<div class="row">
+    <div class="col-md-6 d-flex align-items-center">
+        <img class="img-main img-fluid mx-auto" src="/imagenes/retos-empresas-tecnologia-2019.jpg" alt="Imagen Home">
+    </div>
+    <div class="col-md-6">
+        <div class="text-center">
+            <h1 class="display-4">Bienvenido a TechOil</h1>
+            <p>Para iniciar sesión haga click <a href="../Pages/Login/Login.cshtml"> AQUÍ</a>.</p>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <img class="img-main img-fluid mx-auto" style="border-radius: 30%;" src="/imagenes/Logo-TechOil.png" alt="Logo TechOil">
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
+</div>
+
