--- a/RazorPageGHDS/Pages/Shared/_Layout.cshtml
+++ b/RazorPageGHDS/Pages/Shared/_Layout.cshtml
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="nav-background navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">TechOil</a>
+                <a class="navbar-brand" style="margin-right: 7%; width: 100px;" asp-area="" asp-page="/Index">
+                    <img class="header-logo" src="/imagenes/Header-TechOil.png" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,8 +36,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Servicios/Servicios">Servicios</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Ingresar</a>
+                            <a class="btn buton-primary" asp-area="" asp-page="/Login/Login">Ingresar</a>
                         </li>
                     </ul>
                 </div>
@@ -48,7 +52,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="Privacy-p border-top footer text-muted">
         <div class="container">
             &copy; 2023 - TechOil - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
