--- a/RazorPageGHDS/wwwroot/css/site.css
+++ b/RazorPageGHDS/wwwroot/css/site.css
@@ -14,5 +14,30 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #f0fbfb
+}
+
+/*MI CODIGO*/
+.Privacy-p {
+    background: linear-gradient(to right, #434343, #000000);
+    text-align: center;
+}
+.home-div-container {
+    white-space-collapse: preserve-breaks;
+}
+.img-main {
+    height: -webkit-fill-available;
+}
+.header-logo {
+    border-radius: 30%;
+    width: -webkit-fill-available;
+}
+.buton-primary {
+    color: #fff;
+    background-color: #4eb8c2;
+}
+.buton-primary:hover {
+    color: #fff;
+    background-color: #152f37;
 }
