--- a/RazorPageGHDS/Pages/Usuarios/Usuarios.cshtml
+++ b/RazorPageGHDS/Pages/Usuarios/Usuarios.cshtml
@@ -7,7 +7,7 @@
 <div class="container my-3">
     <div class="row justify-content-center">
         <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-            <h2>Listado de usuarios</h2>
+            <h2 class="text-info">Listado de usuarios</h2>
             <form method="post">
                 <table class="table table-info table-striped border">
                     <thead>
@@ -73,7 +73,7 @@
             </div>
             <div>
                 <div class="d-grid gap-2">
-                    <a asp-page="Agregar" class="btn btn-success">Agregar</a>
+                    <a asp-page="Agregar" class="btn boton-success">Agregar</a>
                 </div>
             </div>
         </div>
