--- a/RazorPageGHDS/Pages/Trabajos/Agregar.cshtml
+++ b/RazorPageGHDS/Pages/Trabajos/Agregar.cshtml
@@ -19,7 +19,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.Fecha"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.Fecha" type="date" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.Fecha" class="text-danger"></span>
@@ -31,7 +31,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.CantHoras"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.CantHoras" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.CantHoras" class="text-danger"></span>
@@ -43,7 +43,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.ValorHora"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.ValorHora" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.ValorHora" class="text-danger"></span>
@@ -55,7 +55,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.Costo"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.Costo" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.Costo" class="text-danger"></span>
