--- a/RazorPageGHDS/Pages/Proyectos/Agregar.cshtml
+++ b/RazorPageGHDS/Pages/Proyectos/Agregar.cshtml
@@ -19,7 +19,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Proyecto.Nombre"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Proyecto.Nombre" class="form-control" />
                         </div>
                         <span asp-validation-for="Proyecto.Nombre" class="text-danger"></span>
@@ -31,7 +31,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Proyecto.Dirección"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Proyecto.Dirección" class="form-control" />
                         </div>
                         <span asp-validation-for="Proyecto.Dirección" class="text-danger"></span>
@@ -43,8 +43,13 @@
                         <div class="col-sm-2">
                             <label asp-for="Proyecto.Estado"></label>
                         </div>
-                        <div class="col-sm-6">
-                            <input asp-for="Proyecto.Estado" class="form-control" />
+                        <div class="col-sm-6 mb-2">
+                            <select asp-for="Proyecto.Estado" class="form-control">
+                                <option value="">Seleccionar Estado</option>
+                                <option value="1">Pendiente</option>
+                                <option value="2">Confirmado</option>
+                                <option value="3">Terminado</option>
+                            </select>
                         </div>
                         <span asp-validation-for="Proyecto.Estado" class="text-danger"></span>
                     </div>
