--- a/RazorPageGHDS/Pages/Servicios/Editar.cshtml
+++ b/RazorPageGHDS/Pages/Servicios/Editar.cshtml
@@ -21,7 +21,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Servicios.Descr"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Servicios.Descr" class="form-control" />
                         </div>
                         <span asp-validation-for="Servicios.Descr" class="text-danger"></span>
@@ -33,8 +33,12 @@
                         <div class="col-sm-2">
                             <label asp-for="Servicios.Estado"></label>
                         </div>
-                        <div class="col-sm-6">
-                            <input asp-for="Servicios.Estado" class="form-control" />
+                        <div class="col-sm-6 mb-2">
+                            <select asp-for="Servicios.Estado" class="form-control">
+                                <option value="">Seleccionar Estado</option>
+                                <option value="true">Disponible</option>
+                                <option value="false">No Disponible</option>
+                            </select>
                         </div>
                         <span asp-validation-for="Servicios.Estado" class="text-danger"></span>
                     </div>
@@ -45,7 +49,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Servicios.ValorHora"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Servicios.ValorHora" class="form-control" />
                         </div>
                         <span asp-validation-for="Servicios.ValorHora" class="text-danger"></span>
