--- a/RazorPageGHDS/Pages/Trabajos/Editar.cshtml
+++ b/RazorPageGHDS/Pages/Trabajos/Editar.cshtml
@@ -21,7 +21,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.Fecha"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.Fecha" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.Fecha" class="text-danger"></span>
@@ -33,7 +33,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.CantHoras"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.CantHoras" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.CantHoras" class="text-danger"></span>
@@ -45,7 +45,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.ValorHora"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.ValorHora" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.ValorHora" class="text-danger"></span>
@@ -57,7 +57,7 @@
                         <div class="col-sm-2">
                             <label asp-for="Trabajo.Costo"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="Trabajo.Costo" class="form-control" />
                         </div>
                         <span asp-validation-for="Trabajo.Costo" class="text-danger"></span>
