--- a/RazorPageGHDS/Pages/Usuarios/Agregar.cshtml
+++ b/RazorPageGHDS/Pages/Usuarios/Agregar.cshtml
@@ -19,7 +19,7 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Nombre"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="User.Nombre" class="form-control" />
                         </div>
                         <span asp-validation-for="User.Nombre" class="text-danger"></span>
@@ -31,7 +31,7 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Dni"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="User.Dni" class="form-control" />
                         </div>
                         <span asp-validation-for="User.Dni" class="text-danger"></span>
@@ -43,8 +43,12 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Tipo"></label>
                         </div>
-                        <div class="col-sm-6">
-                            <input asp-for="User.Tipo" class="form-control" />
+                        <div class="col-sm-6 mb-2">
+                            <select asp-for="User.Tipo" class="form-control">
+                                <option value="">Seleccionar Tipo</option>
+                                <option value="1">Admin</option>
+                                <option value="2">Consultor</option>
+                            </select>
                         </div>
                         <span asp-validation-for="User.Tipo" class="text-danger"></span>
                     </div>
@@ -55,7 +59,7 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Contraseña"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="User.Contraseña"  class="form-control" />
                         </div>
                         <span asp-validation-for="User.Contraseña" class="text-danger"></span>
