--- a/RazorPageGHDS/Pages/Usuarios/Editar.cshtml
+++ b/RazorPageGHDS/Pages/Usuarios/Editar.cshtml
@@ -21,7 +21,7 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Nombre"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="User.Nombre" class="form-control" />
                         </div>
                         <span asp-validation-for="User.Nombre" class="text-danger"></span>
@@ -33,7 +33,7 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Dni"></label>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 mb-2">
                             <input asp-for="User.Dni" class="form-control" />
                         </div>
                         <span asp-validation-for="User.Dni" class="text-danger"></span>
@@ -45,9 +45,9 @@
                         <div class="col-sm-2">
                             <label asp-for="User.Tipo"></label>
                         </div>
-                        <div class="col-sm-6">
-                            @*<input asp-for="Usuario.Tipo" class="form-control" />*@
+                        <div class="col-sm-6 mb-2">
                             <select asp-for="User.Tipo" class="form-control">
+                                <option value="">Seleccionar Tipo</option>
                                 <option value="1">Admin</option>
                                 <option value="2">Consultor</option>
                             </select>
