front input branch mumbach

--- a/RazorPageGHDS/Pages/Usuarios/Usuarios.cshtml
+++ b/RazorPageGHDS/Pages/Usuarios/Usuarios.cshtml
@@ -8,6 +8,15 @@
     <div class="row justify-content-center">
         <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
             <h2 class="text-info">Listado de usuarios</h2>
+
+            @if (Model.Mensaje != null)
+            {
+                <div class="alert-color alert alert-dismissible fade show" role="alert">
+                    @Model.Mensaje
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
             <form method="post">
                 <table class="table table-info table-striped border">
                     <thead>
